force-app/main/default/objects/Import_Container__c/Import_Container__c.object-meta.xml
<CustomObject>
    <label>Import Container</label>
    <nameField>
        <displayFormat>IC-{000000}</displayFormat>
        <label>Import Container Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Containers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>