force-app/main/default/objects/Import_Container__c/fields/Container_Number__c.field-meta.xml
<CustomField>
    <fullName>Container_Number__c</fullName>
    <label>Container Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>