force-app/main/default/objects/Import_Container__c/fields/Container_SF_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Container_SF_Quantity__c</fullName>
    <label>Container SF Quantity</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>