force-app/main/default/objects/Import_Container__c/fields/Container_Weight__c.field-meta.xml
<CustomField>
    <fullName>Container_Weight__c</fullName>
    <label>Container Weight</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>