force-app/main/default/objects/Import_Container__c/fields/Contents__c.field-meta.xml
<CustomField>
    <fullName>Contents__c</fullName>
    <label>Contents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Altar&apos;d State</fullName>
            </value>
            <value>
                <fullName>BWR</fullName>
            </value>
            <value>
                <fullName>General Inventory</fullName>
            </value>
            <value>
                <fullName>Genesco</fullName>
            </value>
            <value>
                <fullName>Hampton</fullName>
            </value>
            <value>
                <fullName>Hilton</fullName>
            </value>
            <value>
                <fullName>KFC</fullName>
            </value>
            <value>
                <fullName>Kroger</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Pollo Tropical</fullName>
            </value>
            <value>
                <fullName>Samples</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>