force-app/main/default/objects/Import_Container__c/fields/Cost_per_Pound__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Pound__c</fullName>
    <formula>Total_Container_Freight_Cost__c  /  Total_Container_Weight__c</formula>
    <label>Cost per Pound</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>