force-app/main/default/objects/Import_Container__c/fields/Cut_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Cut_Off_Date__c</fullName>
    <label>Cut Off Date</label>
    <type>Date</type>
</CustomField>