force-app/main/default/objects/Import_Container__c/fields/Days_Cutoff_to_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Days_Cutoff_to_Finalized__c</fullName>
    <formula>Cut_Off_Date__c -  Finalized_Date__c</formula>
    <inlineHelpText>Calculated number of dates from Cutoff Date to Finalized Date</inlineHelpText>
    <label>Days Cutoff to Finalized</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>