force-app/main/default/objects/Import_Container__c/fields/Days_Final_to_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Days_Final_to_Pickup__c</fullName>
    <formula>Pick_Up_Date__c - Finalized_Date__c</formula>
    <inlineHelpText>Calculated number of days between container Finalized Date and Pickup Date from vendor warehouse</inlineHelpText>
    <label>Days Final to Pickup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>