force-app/main/default/objects/Import_Container__c/fields/Days_Late__c.field-meta.xml
<CustomField>
    <fullName>Days_Late__c</fullName>
    <formula>Arrival_Date__c -   Warehouse_ETA__c</formula>
    <inlineHelpText>Calculates the number of days past the Projected Arrival Date the container actually arrived</inlineHelpText>
    <label>Days Late</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>