force-app/main/default/objects/Import_Container__c/fields/Days_Pickup_to_Sailing__c.field-meta.xml
<CustomField>
    <fullName>Days_Pickup_to_Sailing__c</fullName>
    <formula>Sailing_Date__c -  Pick_Up_Date__c</formula>
    <inlineHelpText>Calculated number of dates from Pickup Date at vendor warehouse to Sailing Date from port of origin</inlineHelpText>
    <label>Days Pickup to Sailing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>