force-app/main/default/objects/Import_Container__c/fields/Days_Port_to_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Days_Port_to_Warehouse__c</fullName>
    <formula>Arrival_Date__c  -  USA_Port_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Port to Warehouse</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>