force-app/main/default/objects/Import_Container__c/fields/Days_Sailing_to_USA_Port__c.field-meta.xml
<CustomField>
    <fullName>Days_Sailing_to_USA_Port__c</fullName>
    <formula>USA_Port_Date__c  - Sailing_Date__c</formula>
    <inlineHelpText>Calculated number of days from Sailing Date from port or origin to Arrival Date at USA port</inlineHelpText>
    <label>Days Sailing to USA Port</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>