force-app/main/default/objects/Import_Container__c/fields/Domestic_Freight_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Freight_Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domestic Freight Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Import Containers (Domestic Freight Carrier)</relationshipLabel>
    <relationshipName>Import_Containers3</relationshipName>
    <type>Lookup</type>
</CustomField>