force-app/main/default/objects/Import_Container__c/fields/Domestic_Freight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Freight_Cost__c</fullName>
    <label>Domestic Freight Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>