force-app/main/default/objects/Import_Container__c/fields/Exam_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exam_Reason__c</fullName>
    <label>Exam Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>A-TECT</fullName>
            </value>
            <value>
                <fullName>CBPa</fullName>
            </value>
            <value>
                <fullName>FDA</fullName>
            </value>
            <value>
                <fullName>Intensive</fullName>
            </value>
            <value>
                <fullName>MET</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>USDA</fullName>
            </value>
            <value>
                <fullName>VACIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>