force-app/main/default/objects/Import_Container__c/fields/Freight_Broker__c.field-meta.xml
<CustomField>
    <fullName>Freight_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Freight Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Import Containers (Freight Broker)</relationshipLabel>
    <relationshipName>Import_Containers1</relationshipName>
    <type>Lookup</type>
</CustomField>