force-app/main/default/objects/Import_Container__c/fields/Fumigation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Fumigation_Cost__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Fumigation Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>