force-app/main/default/objects/Import_Container__c/fields/Inspection_Cost__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Cost__c</fullName>
    <label>Inspection Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>