force-app/main/default/objects/Import_Container__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Manufacturer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Import Containers</relationshipLabel>
    <relationshipName>Import_Containers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>