force-app/main/default/objects/Import_Container__c/fields/Marketing_Materials_Weight__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Materials_Weight__c</fullName>
    <inlineHelpText>The weight of marketing materials (excluding samples) on the container.</inlineHelpText>
    <label>Marketing Materials Weight</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>