force-app/main/default/objects/Import_Container__c/fields/Marketing_Percent__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Percent__c</fullName>
    <formula>Marketing_Materials_Weight__c /  Total_Container_Weight__c</formula>
    <label>Marketing Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>