force-app/main/default/objects/Import_Container__c/fields/Ocean_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Ocean_Carrier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ocean Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Import Containers (Ocean Carrier)</relationshipLabel>
    <relationshipName>Import_Containers2</relationshipName>
    <type>Lookup</type>
</CustomField>