force-app/main/default/objects/Import_Container__c/fields/Ocean_Freight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ocean_Freight_Cost__c</fullName>
    <label>Ocean Freight Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>