force-app/main/default/objects/Import_Container__c/fields/PO_Numbers__c.field-meta.xml
<CustomField>
    <fullName>PO_Numbers__c</fullName>
    <label>PO Numbers</label>
    <type>TextArea</type>
</CustomField>