force-app/main/default/objects/Import_Container__c/fields/Projected_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Arrival_Date__c</fullName>
    <label>Projected Arrival Date</label>
    <type>Date</type>
</CustomField>