force-app/main/default/objects/Import_Container__c/fields/Sailing_Date__c.field-meta.xml
<CustomField>
    <fullName>Sailing_Date__c</fullName>
    <label>Sailing Date</label>
    <type>Date</type>
</CustomField>