force-app/main/default/objects/Import_Container__c/fields/Sample_Weight__c.field-meta.xml
<CustomField>
    <fullName>Sample_Weight__c</fullName>
    <inlineHelpText>The weight of the container contents that are destined for Samples at the time the order is placed with the vendor.</inlineHelpText>
    <label>Sample Weight</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>