force-app/main/default/objects/Import_Container__c/fields/Samples_Percent__c.field-meta.xml
<CustomField>
    <fullName>Samples_Percent__c</fullName>
    <formula>Sample_Weight__c /   Total_Container_Weight__c</formula>
    <label>Samples Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>