force-app/main/default/objects/Import_Container__c/fields/Ship_To_Branch__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Branch__c</fullName>
    <label>Ship To Branch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chattanooga</fullName>
            </value>
            <value>
                <fullName>Cincinnati</fullName>
            </value>
            <value>
                <fullName>Evansville</fullName>
            </value>
            <value>
                <fullName>Indianapolis</fullName>
            </value>
            <value>
                <fullName>Knoxville</fullName>
            </value>
            <value>
                <fullName>Lexington</fullName>
            </value>
            <value>
                <fullName>Louisville</fullName>
            </value>
            <value>
                <fullName>Nashville</fullName>
            </value>
            <value>
                <fullName>Produce Rd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>