force-app/main/default/objects/Import_Container__c/fields/Shipping_from_Port__c.field-meta.xml
<CustomField>
    <fullName>Shipping_from_Port__c</fullName>
    <label>Shipping from Port</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>La Spezia, Italy</fullName>
            </value>
            <value>
                <fullName>Rotterdam, Netherlands</fullName>
            </value>
            <value>
                <fullName>Valencia, Spain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>