force-app/main/default/objects/Import_Container__c/fields/Shipping_to_Port__c.field-meta.xml
<CustomField>
    <fullName>Shipping_to_Port__c</fullName>
    <label>Shipping to Port</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Houston, TX</fullName>
                <color>#E27001</color>
                <label>Houston, TX</label>
            </value>
            <value>
                <fullName>Norfolk, VA</fullName>
                <color>#0B6FCE</color>
                <label>Norfolk, VA</label>
            </value>
            <value>
                <fullName>Savannah, GA</fullName>
                <color>#78C953</color>
                <label>Savannah, GA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>