force-app/main/default/objects/Import_Container__c/fields/Sold_Percent__c.field-meta.xml
<CustomField>
    <fullName>Sold_Percent__c</fullName>
    <formula>Sold_Weight__c /  Total_Container_Weight__c</formula>
    <label>Sold Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>