force-app/main/default/objects/Import_Container__c/fields/Sold_Weight__c.field-meta.xml
<CustomField>
    <fullName>Sold_Weight__c</fullName>
    <inlineHelpText>The weight of container contents that are already Sold at the time the order is placed with the vendor</inlineHelpText>
    <label>Sold Weight</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>