force-app/main/default/objects/Import_Container__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Building</fullName>
                <color>#0B6FCE</color>
                <label>Building</label>
            </value>
            <value>
                <fullName>Factory</fullName>
                <color>#78C953</color>
                <label>Factory</label>
            </value>
            <value>
                <fullName>Port</fullName>
                <color>#E27001</color>
                <label>Port</label>
            </value>
            <value>
                <fullName>Delay - Vessel Overbooked</fullName>
                <color>#A845DC</color>
                <label>Delay - Vessel Overbooked</label>
            </value>
            <value>
                <fullName>Sailing</fullName>
                <color>#F3D904</color>
                <label>Sailing</label>
            </value>
            <value>
                <fullName>Customs</fullName>
                <color>#A53711</color>
                <label>Customs</label>
            </value>
            <value>
                <fullName>Manifest Hold</fullName>
                <color>#66E9BD</color>
                <label>Manifest Hold</label>
            </value>
            <value>
                <fullName>Held for Examination</fullName>
                <color>#0B24BE</color>
                <label>Held for Examination</label>
            </value>
            <value>
                <fullName>Delay - Weather</fullName>
                <color>#419249</color>
                <label>Delay - Weather</label>
            </value>
            <value>
                <fullName>Delay - Port Congestion</fullName>
                <color>#B6E32E</color>
                <label>Delay - Port Congestion</label>
            </value>
            <value>
                <fullName>Delay - Backlog at Rail</fullName>
                <color>#641CCF</color>
                <label>Delay - Backlog at Rail</label>
            </value>
            <value>
                <fullName>Rail</fullName>
                <color>#F96FB7</color>
                <label>Rail</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
                <color>#2F5D85</color>
                <label>Delivered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>