force-app/main/default/objects/Import_Container__c/fields/Stock_Percent__c.field-meta.xml
<CustomField>
    <fullName>Stock_Percent__c</fullName>
    <formula>Stock_Weight__c /  Total_Container_Weight__c</formula>
    <label>Stock Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>