force-app/main/default/objects/Import_Container__c/fields/Total_Container_Freight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Container_Freight_Cost__c</fullName>
    <formula>Customer_Cost__c +  Domestic_Freight_Cost__c +  Fumigation_Cost__c +  Inspection_Cost__c +  Ocean_Freight_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Container Freight Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>