force-app/main/default/objects/Import_Container__c/fields/Total_Container_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Container_Weight__c</fullName>
    <formula>Sold_Weight__c +  Stock_Weight__c +  Sample_Weight__c +  Marketing_Materials_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Container Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>