force-app/main/default/objects/Import_Container__c/fields/Total_Transit_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Transit_Time__c</fullName>
    <formula>Arrival_Date__c -  Finalized_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Transit Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>