force-app/main/default/objects/Import_Container__c/fields/USA_Port_Date__c.field-meta.xml
<CustomField>
    <fullName>USA_Port_Date__c</fullName>
    <label>USA Port Date</label>
    <type>Date</type>
</CustomField>