force-app/main/default/objects/Import_Container__c/fields/Warehouse_ETA__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_ETA__c</fullName>
    <label>Original Warehouse ETA</label>
    <type>Date</type>
</CustomField>