force-app/main/default/objects/Import_Container__c/listViews/Cincinnati_Containers.listView-meta.xml
<ListView>
    <fullName>Cincinnati_Containers</fullName>
    <columns>NAME</columns>
    <columns>Manufacturer__c</columns>
    <columns>Container_Number__c</columns>
    <columns>Branch__c</columns>
    <columns>Contents__c</columns>
    <columns>PO_Numbers__c</columns>
    <columns>Status__c</columns>
    <columns>Sailing_Date__c</columns>
    <columns>USA_Port_Date__c</columns>
    <columns>Warehouse_ETA__c</columns>
    <columns>Arrival_Date__c</columns>
    <columns>Days_Late__c</columns>
    <columns>Container_SF_Quantity__c</columns>
    <columns>Container_Weight__c</columns>
    <columns>Cost_per_Pound__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>includes</operation>
        <value>Cincinnati</value>
    </filters>
    <label>Cincinnati Containers</label>
    <sharedTo>
        <group>CincinnatiBranch</group>
        <group>Executive</group>
        <group>OperationsPurchasing</group>
        <role>VP_of_Sales_A_D</role>
        <role>VPofMarketing</role>
    </sharedTo>
</ListView>