force-app/main/default/objects/Import_Container__c/listViews/Contianer_Not_Yet_Shipped.listView-meta.xml
<ListView>
    <fullName>Contianer_Not_Yet_Shipped</fullName>
    <columns>NAME</columns>
    <columns>Container_Number__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Status__c</columns>
    <columns>Branch__c</columns>
    <columns>Contents__c</columns>
    <columns>PO_Numbers__c</columns>
    <columns>Finalized_Date__c</columns>
    <columns>USA_Port_Date__c</columns>
    <columns>Sailing_Date__c</columns>
    <columns>Warehouse_ETA__c</columns>
    <columns>Arrival_Date__c</columns>
    <columns>Freight_Broker__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Building,Factory</value>
    </filters>
    <label>Containers Not Yet Shipped</label>
    <sharedTo>
        <role>Marketing</role>
        <role>OperationsManager</role>
        <role>PresidentCEO</role>
        <role>Purchasing</role>
        <role>SalesRepresentativeAD</role>
        <role>SalesRepresentativeContractor</role>
        <role>SalesRepresentativeDealer</role>
        <role>SalesRepresentativeInsideSales</role>
        <role>VP_of_Sales_A_D</role>
        <role>VPofMarketing</role>
    </sharedTo>
</ListView>