force-app/main/default/objects/Import_Container__c/listViews/Delivered_Containers.listView-meta.xml
<ListView>
    <fullName>Delivered_Containers</fullName>
    <columns>NAME</columns>
    <columns>Container_Number__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Status__c</columns>
    <columns>Branch__c</columns>
    <columns>Contents__c</columns>
    <columns>PO_Numbers__c</columns>
    <columns>Arrival_Date__c</columns>
    <columns>Freight_Broker__c</columns>
    <columns>Cost_per_Pound__c</columns>
    <columns>Customer_Cost__c</columns>
    <columns>Ocean_Freight_Cost__c</columns>
    <columns>Fumigation_Cost__c</columns>
    <columns>Inspection_Cost__c</columns>
    <columns>Total_Container_Freight_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Delivered</value>
    </filters>
    <label>Delivered Containers</label>
    <sharedTo>
        <role>Marketing</role>
        <role>OperationsManager</role>
        <role>PresidentCEO</role>
        <role>Purchasing</role>
        <role>SalesRepresentativeAD</role>
        <role>SalesRepresentativeContractor</role>
        <role>SalesRepresentativeDealer</role>
        <role>SalesRepresentativeInsideSales</role>
        <role>VP_of_Sales_A_D</role>
        <role>VPofMarketing</role>
    </sharedTo>
</ListView>