force-app/main/default/objects/Import_Container__c/listViews/Genesco_Containers.listView-meta.xml
<ListView>
    <fullName>Genesco_Containers</fullName>
    <columns>NAME</columns>
    <columns>Container_Number__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Status__c</columns>
    <columns>Branch__c</columns>
    <columns>Contents__c</columns>
    <columns>Description__c</columns>
    <columns>PO_Numbers__c</columns>
    <columns>Sailing_Date__c</columns>
    <columns>USA_Port_Date__c</columns>
    <columns>Warehouse_ETA__c</columns>
    <columns>Arrival_Date__c</columns>
    <columns>Freight_Broker__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Cost_per_Pound__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contents__c</field>
        <operation>includes</operation>
        <value>Genesco</value>
    </filters>
    <label>Genesco Containers</label>
    <sharedTo>
        <group>Executive</group>
        <group>NashvilleBranch</group>
        <group>OperationsPurchasing</group>
        <role>VP_of_Sales_A_D</role>
        <role>VPofMarketing</role>
    </sharedTo>
</ListView>